# api-rust

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: bucket.rs  info.rs  lib.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220810_000001_create_info_table.rs  m20220822_000001_create_user_table.rs  m20220823_000001_create_user_table.rs
src/: auth.rs  bucket.rs  context.rs  errors.rs  file.rs  main.rs  repository.rs  response_dto.rs  responses.rs  structures.rs  user.rs
src/auth/: auth_controller.rs  auth_errors.rs  auth_service.rs  claims.rs  dto.rs  guards.rs  jwt_service.rs  mod.rs
src/bucket/: bucket_controller.rs  bucket_errors.rs  bucket_manager.rs  bucket_repository.rs  bucket_service.rs  dto.rs  mod.rs
src/file/: dto.rs  file_controller.rs  file_errors.rs  file_manager.rs  file_repository.rs  file_service.rs  mod.rs
src/user/: dto.rs  mod.rs  user_controller.rs  user_errors.rs  user_repository.rs
