[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["entity", "migration"]

[dependencies]
actix-web = "4"
futures-util = "0.3"
thiserror = "1.0.26"
actix-multipart = "0.4"
serde = "1"
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.83"
actix-easy-multipart = "2"
dotenv = "0.15.0"
actix-jwt-auth-middleware = "0.1.2"
pwhash = "1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sea-orm]
version = "^0.9.1" # sea-orm version
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
]
