[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["entity", "migration"]

[dependencies]
actix-web = "4"
futures-util = "0.3"
thiserror = "1.0.26"
actix-multipart = "0.4"
serde = "1"
entity = { path = "entity" }
migration = { path = "migration" }
serde_json = "1.0.83"
actix-easy-multipart = "2"
dotenv = "0.15.0"
actix-jwt-auth-middleware = "0.1.2"
pwhash = "1"
regex = "1"
validator = { version = "0.12", features = ["derive"] }
lazy_static = "1.4.0"
fancy-regex = "0.10.0"
derive_more = "0.99.17"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]

[dependencies.sea-orm]
version = "^0.9.1" # sea-orm version
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-postgres",
]
