[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
[dependencies.sea-orm]
version = "^0.9.1" # sea-orm version

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]
